--- a/bibliographie.bib
+++ b/bibliographie.bib
@@ -54,3 +54,11 @@
     publisher = "American Mathematical Society",
     }
   
+  @MISC{weissauer,
+  AUTHOR       = "Weissauer, Rainer",
+  TITLE        = "Kompakte Riemannsche Flächen",
+  YEAR         = "2017",
+  HOWPUBLISHED = "Website",
+  NOTE         = "\url{https://www.mathi.uni-heidelberg.de/groups/algebrageom/vorlesungsskripte/RiemannSurfacesNeu.pdf};
+                  abgerufen am 24. September 2018."
+}
